BusOne/src/objects/Material_Order_Line_Item__c.object
<CustomObject>
    <description>Line Items for each Material Order</description>
    <fields>
        <fullName>Material_Order__c</fullName>
        <description>Link to the Material Order record</description>
        <label>Material Order</label>
        <referenceTo>Material_Order__c</referenceTo>
        <relationshipLabel>Material Order Line Items</relationshipLabel>
        <relationshipName>Material_Order_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the product in the Product Catalog</description>
        <label>Products</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Material Order Line Items</relationshipLabel>
        <relationshipName>Material_Order_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity ordered</description>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Material Order Line Item</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>